Fix follow-up bug on misaligned scrollbar

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -102,8 +102,8 @@
 
 .list-cell:filled {
     -fx-background-color: #4f4545;
-    -fx-border-color: #271f1f;
-    -fx-border-width: 1px 2px 1px 2px;
+    -fx-border-color: #d9d9d9;
+    -fx-border-width: 1px 0px 1px 0px;
 }
 
 .list-cell:filled:selected {
